--- a/NoteApp/Views/List/AddNotes.cshtml
+++ b/NoteApp/Views/List/AddNotes.cshtml
@@ -1,48 +1,97 @@
-﻿@model NoteApp.Models.ListModel
-@{
-    ViewBag.Title = "AddNotes";
-}
-<link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
-<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
-<br />
+﻿@using NoteApp.Models;
+@model ListViewModel
 
-<div class="d-flex justify-content-center">
-    @using (Html.BeginForm("AddNotes", "List", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        <form>
-            <!-- Example single danger button -->
-            <div class="btn-group">
-                <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    Add Notes
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" onclick="ShowTextbox();">Add Text</a></li>
-                    <li><a class="dropdown-item" onclick="ShowFile();">Add File</a></li>
-                </ul>
-            </div>
-            <div class="mb-3" id="text" style="display:none">
-                <textarea class="form-control" id="abc" name="ListDescription" placeholder="Write Something..." rows="08" cols="100"></textarea>
-            </div>
-            <div class="mb-3" id="file" style="display:none">
-                <input type='file' name="file" class="form-control" onchange="readURL(this);" /><br />
-                <img id="img" alt="" />
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe id="vedio"></iframe>
-                </div>
-            </div>
-            <div class="mb-3 ">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+@*@model NoteApp.Models.NotesModel*@
+<style>
+    .editor-field textarea {
+        width: 400px;
+        height: 100px;
     }
+</style>
+<br /> <br /> <br />
+<div class="d-flex justify-content-center">
+    <div class="col-md-16">
+        <section>
+            @using (Html.BeginForm("AddNotes", "List", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.AntiForgeryToken()
+                <h4 style=" text-align: center;"></h4> <br>
+
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-md-10">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" Style=" width: 400px;align-self:center">
+                                Add Notes
+                            </button>
+                            <ul class="dropdown-menu" Style=" width: 400px;align-self:center">
+                                <li><a class="dropdown-item" onclick="ShowTextbox();">Add Text</a></li>
+                                <li><a class="dropdown-item" onclick="ShowFile();">Add File</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <hr />
+                <br />
+                <div class="form-group">
+                    <div class="col-md-10">
+                        <div class="mb-3" id="text" style="display:none">
+                            @Html.TextAreaFor(model => model.NotesModel.NoteDesciption, new { style = "width: 120%; max-width: 134%;", @class = "form-control", @placeholder = "Enter Note Description" })
+
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <div class="mb-3" id="file" style="display:none">
+                            @Html.TextBoxFor(m => m.File, new { style = "width: 120%; max-width: 134%;", type = "file", @class = "form-control", @onchange = "readURL(this);" })
+                            <img id="img" alt="" />
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe id="vedio" ></iframe>
+                                <audio id="audio" controls>
+                                    
+                                </audio>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <div>
+                            <select class="form-control" required multiple="multiple" id="tagData" onchange="test();" name="Tags" style="width: 120%; max-width: 134%;"></select>
+                        </div>
+                    </div>
+                </div><hr />
+                <br>
+                <div class="form-group">
+                    <div class="d-flex justify-content-center">
+                        <input type="submit" class="btn btn-primary" value="Create List" style="width: 120%; max-width: 134%;" align-self:center" /><br />
+                    </div> 
+                    <div class="d-flex justify-content-center">
+                        <a href="http://localhost:58940/List"  style="width: 120%; max-width: 134%; margin-top:5px;  margin-bottom:5px" align-self:center">
+                        <input type="button" class="btn btn-primary" value="Back to List" style="    width: 101%; max-width: 134%;" />
+                        </a>
+                    </div>
+                    <br />
+                </div>
+
+            }
+        </section>
+    </div>
+
 </div>
+<br /> <br /> <br /> <br /> <br /> <br />
+
+
 
 <script>
     $(document).ready(function () {
         console.log("ready!");
         $("img").hide();
         $("iframe").hide();
+        $("audio").hide();
+
     });
     function ShowTextbox() {
         $("#text").show();
@@ -58,9 +107,11 @@
             var reader = new FileReader();
             var fileTypes = ['jpg', 'jpeg', 'png'];  //acceptable file types
             var filevedio = ['mp4', 'ever', 'you', 'want'];  //acceptable file types
+            var fileaudio = ['mp3','ogg'];  //acceptable file types
             var extension = input.files[0].name.split('.').pop().toLowerCase(),  //file extension from input file
-                isImages = fileTypes.indexOf(extension) > -1;  //is extension in acceptable types
+            isImages = fileTypes.indexOf(extension) > -1;  //is extension in acceptable types
             isVideos = filevedio.indexOf(extension) > -1;  //is extension in acceptable types
+            isAudio = fileaudio.indexOf(extension) > -1;  //is extension in acceptable types
             console.log(extension);
             console.log(isImages);
             console.log(isVideos);
@@ -80,14 +131,52 @@
                     $("iframe").show();
                     $('#vedio')
                         .attr('src', e.target.result)
-                        .width(280)
+                        .width(395)
                         .height(200);
                     console.log("vedio uplaoaded");
+                }
+                else if (isAudio) {
+                    $("img").hide();
+                    $("iframe").hide();
+                    $("audio").show();
+                    $('#audio')
+                        .attr('src', e.target.result)
+                        .width(395)
+                        .height(60);
+                    console.log("audio uplaoaded");
+
                 }
 
             };
             reader.readAsDataURL(input.files[0]);
         }
     }
+
+
+    function test() {
+        var a = $("#tagData").val();
+        console.log(a);
+
+    }
+    $("#tagData").select2({
+        placeholder: 'Select Tag',
+        tags: true,
+        tokenSeparators: [',', ' '],
+         maximumSelectionLength: 1
+    })
+
+
 </script>
+
+@*@foreach (var item in Model.ListModels)
+    {
+
+    }
+
+    @foreach (var item in Model.NotesModel)
+    {
+
+    }*@
+
+
 
