--- a/NoteApp/Views/List/EditList.cshtml
+++ b/NoteApp/Views/List/EditList.cshtml
@@ -2,16 +2,63 @@
     ViewBag.Title = "Edit";
 }
 @model NoteApp.Models.ListModel
+<div class="d-flex justify-content-center">
+    <div class="col-md-16">
+        <section>
+            @using (Html.BeginForm("EditLists", "List", FormMethod.Post))
+            {
+                @Html.EditorFor(model => model.List_Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
+                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
+                @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
+                @Html.AntiForgeryToken()
+                <h4 style=" text-align: center;"></h4> <br>
 
-<h2>Edit</h2>
-@using (Html.BeginForm("EditLists", "List", FormMethod.Post))
-{
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-md-10" Style=" width: 400px;align-self:center">
+                        <h5 style="  text-align: center;">Edit List</h5>
+                    </div>
+                </div>
+                <hr />
+                <br />
+                <div class="form-group">
+                    <div class="col-md-10">
+                        <div class="mb-3">
+                            <label>Created Date :</label>
+                            @Html.EditorFor(model => model.CreatedDate, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly", style = "width: 120%; max-width: 134%;" } })
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-10">
+                        <div class="mb-3">
+                            <label>Last  Modified :</label>
+                            @Html.EditorFor(model => model.UpdatedDate, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly", style = "width: 120%; max-width: 134%;" } })
 
-@Html.EditorFor(model => model.List_Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
-@Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
-@Html.EditorFor(model => model.CreatedDate, new { htmlAttributes = new { @class = "form-control" , @readonly = "readonly"} })
-@Html.EditorFor(model => model.UpdatedDate, new { htmlAttributes = new { @class = "form-control" , @readonly = "readonly"} })
-@Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control" , style = "display: none;" } })
-@Html.EditorFor(model => model.ListName, new { htmlAttributes = new { @class = "form-control" } })
-<input type="submit" value="Update" />
-}
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class=" col-md-10">
+                        <label>List Title :</label>
+                        @Html.EditorFor(model => model.ListName, new { htmlAttributes = new { @class = "form-control", style = "width: 120%; max-width: 134%;" } })
+                    </div>
+                </div><hr />
+                <br>
+                <div class="form-group">
+                    <div class="d-flex justify-content-center">
+                        <input type="submit" class="btn btn-primary" value="Update List" style="width: 120%; max-width: 134%;" align-self:center" /><br />
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <a href="http://localhost:58940/List" style="width: 120%; max-width: 134%; margin-top:5px;  margin-bottom:5px" align-self:center">
+                            <input type="button" class="btn btn-primary" value="Back to List" style="    width: 101%; max-width: 134%;" />
+                        </a>
+                    </div>
+                    <br />
+                </div>
+
+            }
+        </section>
+    </div>
+
+</div>
