--- a/NoteApp/Views/Shared/_GetLists.cshtml
+++ b/NoteApp/Views/Shared/_GetLists.cshtml
@@ -2,6 +2,22 @@
 @model IPagedList<NoteApp.Models.ListModel>
 @using PagedList;
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+    #clearbtn {
+        padding-left: 27px;
+        text-align: center;
+        display: table-cell;
+        vertical-align: middle;
+    }
+</style>
+<div>
+    <select class="form-control" required multiple="multiple" id="tagData" name="Tags" style="width: 80%; max-width: 134%;">
+    </select>
+    <button class="btn btn-secondary"  onclick="SearchByTags();">Show Notes</button>
+    <button class="btn btn-secondary" id="clearbtn" onclick="ClearSearchBar();">Clear Tags</button>
+</div>
+<hr style=" border: 5px solid green; border-radius: 10px;" />
+<span class="badge rounded-pill bg-dark">All List:</span>
 <div class="card-deck ">
     <div class="row">
         @foreach (var item in Model)
@@ -10,13 +26,10 @@
             <div class="card border-dark mb-3" style="max-width: 26rem;margin-left:16px;">
                 <div class="card-header bg-transparent border-success" style="text-align:center"> @item.ListName</div>
                 <div class="card-body text-success" style="text-align:center">
-                    @*@if (item.ListDescription == null)
-                    {*@
-                    <a href="@Url.Action("testing", "List", new { Id = item.List_Id })" class="btn btn-secondary btn-sm"><img src="https://img.icons8.com/office/16/000000/add--v2.png" />Add Notes </a>
-                   
+                    <a href="@Url.Action("AddNotes", "List", new { Id = item.List_Id })" class="btn btn-secondary btn-sm"><img src="https://img.icons8.com/office/16/000000/add--v2.png" />Add Notes </a>
                     <a href="@Url.Action("EditList","List", new { id = item.List_Id })" class="btn btn-secondary btn-sm"><img src="https://img.icons8.com/ios-glyphs/16/000000/edit--v2.png" />Edit List</a>
-                    <a href="@Url.Action("DeleteList","List", new { id = item.List_Id })" class="btn btn-secondary btn-sm"onclick="return confirm('Are you sure you to delete this Record?');"><img src="https://img.icons8.com/fluency/16/000000/delete-sign.png" />Delete </a>
-                    <a href="# " class="btn btn-secondary btn-sm"><img src="https://img.icons8.com/ios/16/000000/visible.png" />View List</a>
+                    <a href="@Url.Action("DeleteList","List", new { id = item.List_Id })" class="btn btn-secondary btn-sm" onclick="return confirm('Are you sure you to delete this Record?');"><img src="https://img.icons8.com/fluency/16/000000/delete-sign.png" />Delete </a>
+                    <a href="@Url.Action("ShowNotes","List", new { id = item.List_Id })" class="btn btn-secondary btn-sm"><img src="https://img.icons8.com/ios/16/000000/visible.png" />View List</a>
                     <p class="card-text"></p>
                 </div>
                 <div class="card-footer bg-transparent border-success" style="text-align:center">
@@ -34,3 +47,30 @@
 
 
 </div>
+<script>
+    $(document).ready(function () {
+        console.log("ready!");
+        $("#tagData").select2({
+            placeholder: 'Search by Tag...',
+            tags: true,
+            maximumSelectionLength: 1,
+            tokenSeparators: [',', ' ']
+        })
+
+    });
+    function ClearSearchBar() {
+        console.log("Clear Search bar !")
+        $('#tagData').val(null).trigger('change');
+    }
+    function SearchByTags() {
+        var tagitem = $('#tagData').val();
+        console.log(tagitem);
+        window.location.href="/List/SearchByTags?Tag="+tagitem;
+
+    }
+
+
+
+
+
+</script>
