--- a/NoteApp/Views/Shared/_RecentNotes.cshtml
+++ b/NoteApp/Views/Shared/_RecentNotes.cshtml
@@ -45,7 +45,7 @@
                     <p class="card-text">@item.NoteDesciption  </p>
                 </div>
                 <div class="card-footer bg-transparent border-success" style="text-align:center">
-                    <span class="badge bg-secondary">Created Date: &nbsp;@item.CreatedDate</span>
+                    <span class="badge bg-secondary" style="margin-left: -13px;">Created Date: &nbsp;@item.CreatedDate</span>
                 </div>
             </div>
             }
