--- a/NoteApp/Views/List/AddNotes.cshtml
+++ b/NoteApp/Views/List/AddNotes.cshtml
@@ -66,7 +66,7 @@
                 <br>
                 <div class="form-group">
                     <div class="d-flex justify-content-center">
-                        <input type="submit" class="btn btn-primary" value="Create List" style="width: 120%; max-width: 134%;" align-self:center" /><br />
+                        <input type="submit" class="btn btn-primary" value="Create Note" style="width: 120%; max-width: 134%;" align-self:center" /><br />
                     </div> 
                     <div class="d-flex justify-content-center">
                         <a href="http://localhost:58940/List"  style="width: 120%; max-width: 134%; margin-top:5px;  margin-bottom:5px" align-self:center">
