--- a/NoteApp/Views/Shared/_RecentNotes.cshtml
+++ b/NoteApp/Views/Shared/_RecentNotes.cshtml
@@ -6,6 +6,13 @@
         border-radius: 20px;
         margin: 0 auto;
     }
+
+    .summary {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-line-clamp: 5; /* number of lines to show */
+    }
 </style>
 <span class="badge rounded-pill bg-dark">Recent Add :</span>
 <div class="card-deck ">
@@ -14,40 +21,49 @@
         {
             if (Model != null)
             {
-            <!-- Display a div of col-sm-3 containing the card up to n number of times, ie in a loop -->
-            <div class="card border-dark mb-3" style="max-width: 16rem;margin-left:16px;">
-                <div class="card-header bg-transparent border-success" style="text-align:center">
-                    <span class="badge bg-secondary">Note Id: &nbsp;@item.NoteId</span>
-                </div>
-                <div class="card-body text-success" style="text-align:center">
-                    @if (item.NoteFile != null)
-                    {
-                        FileInfo fi = new FileInfo(item.NoteFile);
-                        // Get file extension
-                        string extn = fi.Extension;
-                        if (extn == ".mp4")
+                <!-- Display a div of col-sm-3 containing the card up to n number of times, ie in a loop -->
+                <div class="card border-dark mb-3" style="max-width: 16rem;margin-left:16px;">
+                    <div class="card-header bg-transparent border-success" style="text-align:center">
+                        <span class="badge bg-secondary">Note Id: &nbsp;@item.NoteId</span>
+                    </div>
+                    <div class="card-body text-success" style="text-align:center">
+                        @if (item.NoteFile != null)
                         {
-                            <video controls="controls" loop autoplay muted width="200" height="300">
-                                <source src="@item.NoteFile" type="video/mp4" />
-                            </video>
-                        }
-                        else if (extn == ".mp3")
-                        {
-                            <audio id="audio" controls style="  width: 230px; margin-left: -17px; margin-top: 121px"><source src="@item.NoteFile"></audio>
-                        }
-                        else
-                        {
+                            FileInfo fi = new FileInfo(item.NoteFile);
+                            // Get file extension
+                            string extn = fi.Extension;
+                            if (extn == ".mp4")
+                            {
+                                <video controls="controls" loop autoplay muted width="200" height="300">
+                                    <source src="@item.NoteFile" type="video/mp4" />
+                                </video>
+                            }
+                            else if (extn == ".mp3")
+                            {
+                                <audio id="audio" controls style="  width: 230px; margin-left: -17px; margin-top: 121px"><source src="@item.NoteFile"></audio>
+                            }
+                            else
+                            {
 
-                            <img src=" @item.NoteFile" width="200" height="300">
+                                <img src=" @item.NoteFile" width="200" height="300">
 
+                            }
                         }
-                    }
-                    <p class="card-text">@item.NoteDesciption  </p>
+
+                        @if (item.NoteDesciption != null)
+                        {
+                            <p id="notetext" style="text-align:center" class="card-text summary">@item.NoteDesciption</p>
+                            if (item.NoteDesciption != null && item.NoteDesciption.Length > 250)
+                            {
+                                <a class="btn btn-light" href="#">Read More</a>
+                            }
+                        }
+
+                    </div>
+                    <div class="card-footer bg-transparent border-success" style="text-align:center">
+                        <span class="badge bg-secondary" style="margin-left: -13px;">Created Date: &nbsp;@item.CreatedDate</span>
+                    </div>
                 </div>
-                <div class="card-footer bg-transparent border-success" style="text-align:center">
-                    <span class="badge bg-secondary" style="margin-left: -13px;">Created Date: &nbsp;@item.CreatedDate</span>
-                </div>
-            </div>
             }
             else
             {
@@ -57,3 +73,14 @@
         }
     </div>
 </div>
+<script>
+    $('a').click(function () {
+        var text = $(this).prev('#notetext');
+        text.toggleClass('summary');
+        if (text.hasClass('summary')) {
+            $(this).text('more');
+        } else {
+            $(this).text('less');
+        }
+    });
+</script>
