--- a/NoteApp/Views/List/EditList.cshtml
+++ b/NoteApp/Views/List/EditList.cshtml
@@ -8,7 +8,7 @@
             @using (Html.BeginForm("EditLists", "List", FormMethod.Post))
             {
                 @Html.EditorFor(model => model.List_Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
-                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
+                @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
                 @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
                 @Html.AntiForgeryToken()
                 <h4 style=" text-align: center;"></h4> <br>
@@ -41,7 +41,7 @@
                 <div class="form-group">
                     <div class=" col-md-10">
                         <label>List Title :</label>
-                        @Html.EditorFor(model => model.ListName, new { htmlAttributes = new { @class = "form-control", style = "width: 120%; max-width: 134%;" } })
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", style = "width: 120%; max-width: 134%;" } })
                     </div>
                 </div><hr />
                 <br>
