--- a/NoteApp/Views/List/EditNote.cshtml
+++ b/NoteApp/Views/List/EditNote.cshtml
@@ -14,10 +14,11 @@
         <section>
             @using (Html.BeginForm("EditNotes", "List", FormMethod.Post))
             {
-                @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
+                @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
                 @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
                 @Html.EditorFor(model => model.List_Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
                 @Html.EditorFor(model => model.NoteId, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
+                @Html.EditorFor(model => model.NoteFile, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
                 @Html.AntiForgeryToken()
                 <h4 style=" text-align: center;"></h4> <br>
 
@@ -36,6 +37,14 @@
                             @Html.EditorFor(model => model.CreatedDate, new { htmlAttributes = new {name = "GetListModels", @class = "form-control", style = "width: 120%; max-width: 134%;" } })
                         </div>
                     </div>
+                </div> 
+                <div class="form-group">
+                    <div class="col-md-10">
+                        <div class="mb-3">
+                            <label>Last Modified:</label>
+                            @Html.EditorFor(model => model.UpdatedDate, new { htmlAttributes = new {name = "GetListModels", @class = "form-control", style = "width: 120%; max-width: 134%;" } })
+                        </div>
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -47,7 +56,7 @@
                             string extn = fi.Extension;
                             if (extn == ".mp4")
                             {
-                                <video controls="controls" width="400" height="300">
+                                <video controls="controls" autoplay loop muted width="400" height="300">
                                     <source src="@Model.NoteFile" type="video/mp4" />
                                 </video>
                             }
@@ -70,7 +79,18 @@
                 </div>
                 <div class="form-group">
                     <div class=" col-md-10">
-                        <select class="form-control" required multiple="multiple" id="tagData" name="Tags" style="width: 120%; max-width: 134%;"></select>
+                        <select class="form-control" value="1as"required multiple="multiple" id="tagData" name="Tags" style="width: 120%; max-width: 134%;">
+                            @{
+                                if (@ViewBag.existingTags != null)
+                                {
+                                    foreach (var items in @ViewBag.existingTags)
+                                    {
+                                        <option  selected="selected">@items</option>
+                                    }
+                                }
+                            }
+
+                        </select>
                     </div>
                 </div><hr />
 
@@ -98,6 +118,6 @@
         placeholder: 'Select Tag',
         tags: true,
         tokenSeparators: [',', ' '],
-        maximumSelectionLength: 1
+
     })
 </script>
