--- a/NoteApp/Views/Shared/_GetLists.cshtml
+++ b/NoteApp/Views/Shared/_GetLists.cshtml
@@ -18,7 +18,7 @@
         {
             <!-- Display a div of col-sm-3 containing the card up to n number of times, ie in a loop -->
             <div class="card border-dark mb-3" style="max-width: 26rem;margin-left:16px;">
-                <div class="card-header bg-transparent border-success" style="text-align:center"> @item.ListName</div>
+                <div class="card-header bg-transparent border-success" style="text-align:center"> @item.Name</div>
                 <div class="card-body text-success" style="text-align:center">
                     <a href="@Url.Action("AddNotes", "List", new { Id = item.List_Id })" class="btn btn-secondary btn-sm" style="margin-left: -16px;"> <img src="https://img.icons8.com/office/16/000000/add--v2.png" />Add Notes </a>
                     <a href="@Url.Action("EditList","List", new { id = item.List_Id })" class="btn btn-secondary btn-sm"><img src="https://img.icons8.com/ios-glyphs/16/000000/edit--v2.png" />Edit List</a>
