--- a/NoteApp/Views/List/EditList.cshtml
+++ b/NoteApp/Views/List/EditList.cshtml
@@ -7,7 +7,7 @@
         <section>
             @using (Html.BeginForm("EditLists", "List", FormMethod.Post))
             {
-                @Html.EditorFor(model => model.List_Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
+                @Html.EditorFor(model => model.List_Id, new { htmlAttributes = new { @class = "form-control", style = "display: none;" , @required = "required"} })
                 @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
                 @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control", style = "display: none;" } })
                 @Html.AntiForgeryToken()
@@ -17,6 +17,10 @@
                 <div class="form-group">
                     <div class="col-md-10" Style=" width: 400px;align-self:center">
                         <h5 style="  text-align: center;">Edit List</h5>
+                        @if ((string)TempData["var"] == "qwerty")
+                        {
+                            <span style="margin-left: 109px;" class="badge rounded-pill bg-danger">There is no List with this Id !!</span>
+                        }
                     </div>
                 </div>
                 <hr />
