--- a/NoteApp/Views/Shared/_LoginPartial.cshtml
+++ b/NoteApp/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,8 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link active" })
+                @ViewBag.testing
+                @Html.ActionLink("Hello " + User.Identity.Name + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class = "nav-link active" })
             </li>
             <li><a class="nav-link active" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
